tests/negative_tests/modules/repeatedModule.sa
module repeatedModule where
    module M where
        x = True
    module M where
        f = True